// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> with additional className matches its snapshot 1`] = `
<Attach
  className="y-icon TEST_CLASSNAME"
  data-icon="attach"
  style={Object {}}
/>
`;

exports[`<Icon /> with block matches its snapshot 1`] = `
<Attach
  className="y-icon y-icon__isBlock"
  data-icon="attach"
  style={Object {}}
/>
`;

exports[`<Icon /> with color matches its snapshot 1`] = `
<Attach
  className="y-icon"
  data-icon="attach"
  style={
    Object {
      "color": "blue",
    }
  }
/>
`;

exports[`<Icon /> with minimal options matches its snapshot 1`] = `
<Attach
  className="y-icon"
  data-icon="attach"
  style={Object {}}
/>
`;

exports[`<Icon /> with passed size value matches its snapshot 1`] = `
<Attach
  className="y-icon"
  data-icon="attach"
  style={
    Object {
      "height": "32px",
      "width": "32px",
    }
  }
/>
`;
